<resources>
    <string name="app_name">Day Flow</string>
    <string name="daily">Daily</string>
    <string name="yearly">Yearly</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="try_again">try again</string>
    <string name="this_filed_required">this field required</string>
    <string name="cancel">Cancel</string>
    <string name="headline">headline</string>
    <string name="description">description</string>
    <string name="schedule_task">Schedule Task</string>
    <string name="ok">Ok</string>
    <string name="add_task">Add Task</string>
    <string name="done">Done</string>
    <string name="permission">Permission</string>
    <string name="this_app_require_to_receive_tasks_notification_please_grant_the_permission">This app require to receive tasks notification, Please grant the permission.</string>
    <string name="this_app_require_to_receive_tasks_notification_please_allow_access_in_the_settings">This app require to receive tasks notification, Please allow access in the settings.</string>
    <string name="not_complete">Not Complete</string>
    <string name="if_scheduling_task_you_must_select_date_and_time">if scheduling task you must select date and time.</string>
    <string name="add">Add</string>
    <string name="unvalid">UnValid</string>
    <string name="you_select_a_date_or_time_already_gone_please_choose_correct_date">you select a date or time already gone, please choose correct date.</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_to_delete_this_item_we_cannot_get_it_back">Are you sure to delete this item?\n we cannot get it back.</string>
    <string name="delete">Delete</string>
    <string name="session">Session</string>
    <string name="get_ready_to_focus">Get ready to focus</string>
    <string name="set_your_session_time_and_start_then_in_the_end_of_session_will_notify_you">set your session time and start then in the end of session will notify you.</string>
    <string name="minutes">Minutes</string>
    <string name="start_session">Start Session</string>
    <string name="settings">Settings</string>
    <string name="block_apps_notifications">Block Apps Notifications</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="apps_notification">Apps Notification</string>
    <string name="block_app_notification_until_session">block app notification until session</string>
    <string name="app_need_a_permission_to_access_your_notification_to_control_your_notification_until_focus_sessions">app need a permission to access your notification to control your notification until focus sessions.</string>
    <string name="plus_session_duration_icon">plus session duration icon</string>
    <string name="minus_session_duration_icon">minus session duration icon</string>
    <string name="pause_and_resume_icon">pause and resume icon</string>
    <string name="finish_session_icon">finish session icon</string>
    <string name="plant_icon">plant icon</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="open_settings">Open Settings</string>
    <string name="to_make_app_works_correctly_please_disable_battery_optimization_for_this_app"><![CDATA[To make app works correctly, please disable battery optimization for this app.]]></string>
    <string name="change_alarm_ringtone">Change Alarm ringtone</string>
    <string name="from_defaults">from defaults</string>
    <string name="from_device">from device</string>
    <string name="media_permission">Media Permission</string>
    <string name="to_change_alarm_ringtone_you_must_give_us_media_permission_to_help_you_pick_audio_file">to change alarm ringtone you must give us media permission to help you pick audio file.</string>
    <string name="media_permission_needed">Media Permission Needed</string>
    <string name="the_app_needs_media_permission_to_change_your_alarm_ringtone_please_grant_it_in_the_app_settings">The app needs media permission to change your alarm ringtone. Please grant it in the app settings.</string>
    <string name="block">Block</string>
    <string name="stop">Stop</string>
    <string name="snooze">Snooze</string>
    <string name="permissionicon">permissionIcon</string>
    <string name="allow">Allow</string>
    <string name="schedule_alarm">Schedule Alarm</string>
    <string name="draw_over_apps">Draw Over Apps</string>
    <string name="to_ring_alarm_in_exact_time">to ring alarm in exact time.</string>
    <string name="to_make_alerting_works_correctly">to make alerting works correctly.</string>
    <string name="deny">Deny</string>
</resources>