package com.example.dayflow.ui.utils

object UiTestTags {
    const val LOADING_CONTENT = "LOADING_CONTENT"
    const val VISIBLE_CONTENT = "VISIBLE_CONTENT"
    const val FAILURE_CONTENT = "FAILURE_CONTENT"

    const val DAILY_TABS = "DAILY_TASK_TABS"
    const val DONE_DAILY_TASKS_CONTENT = "DONE_DAILY_TASKS_CONTENT"
    const val IN_PROGRESS_DAILY_TASKS_CONTENT = "IN_PROGRESS_DAILY_TASKS_CONTENT"

    const val ADD_TASK_FAB = "ADD_TASK_FAB"
    const val ADD_TASK_CONTENT = "ADD_TASK_CONTENT"
    const val DATE_PICKER_MODAL = "DATE_PICKER_MODAL"
    const val TIME_PICKER_MODAL = "TIME_PICKER_MODAL"

    const val TASK_CONTENT = "TASK_CONTENT"

    const val SESSION_INFO = "SESSION_INFO"
    const val SESSION_COUNT_DOWN = "SESSION_COUNT_DOWN"

    const val BLOCK_APPS_NOTIFICATION_BUTTON = "BLOCK_APPS_NOTIFICATION_BUTTON"
    const val SWITCH_THEME_BUTTON = "SWITCH_THEME_BUTTON"
}