...
                ) else null,
                shape = CircleShape,
                onClick = onClickDone
            )
            PrimaryTextButton(
                modifier = Modifier.weight(1f),
                text = "In Progress",
                containerColor = if (!isDoneVisible) MaterialTheme.colorScheme.secondary else MaterialTheme.colorScheme.outlineVariant,
                contentColor = if (!isDoneVisible) MaterialTheme.colorScheme.onSecondary else MaterialTheme.colorScheme.outline,
                border = if (!isDoneVisible) BorderStroke(
                    1.dp,
                    MaterialTheme.colorScheme.outline
                ) else null,
...
